--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -5,10 +5,9 @@ $color4: #114e60;
 $light-font-color: #507dcc;
 
 .footerWrapper {
-  padding: 5% 10%;
+  padding: 5% 10% 1%;
   display: flex;
   background-color: $color1;
-  position: relative;
   .leftDiv {
     width: 60%;
     display: flex;
@@ -128,11 +127,11 @@ $light-font-color: #507dcc;
   }
 }
 .copyright {
+  background-color: $color1;
   width: 100%;
   margin: auto;
   color: white;
   font-size: 1.2rem;
-  position: absolute;
   text-align: center;
-  bottom: -2rem;
+  padding-bottom: 5%;
 }
