--- a/src/components/Handpicked.scss
+++ b/src/components/Handpicked.scss
@@ -21,9 +21,9 @@ $color4: #114e60;
       .titleDiv {
         flex: 60%;
         .title {
-          font-size: 1.5rem;
-          margin: 0.5rem 0;
-          font-weight: bolder;
+          font-size: 2rem;
+          margin: 0.2rem 0;
+          font-weight: 600;
         }
         .para {
           font-size: 0.8rem;
