--- a/src/components/Handpicked.scss
+++ b/src/components/Handpicked.scss
@@ -3,7 +3,7 @@ $color2: #f4eee8;
 $color3: #f5cebe;
 $color4: #114e60;
 .handpickedWrapper {
-  padding: 1rem 10%;
+  padding: 7% 10%;
   display: flex;
   justify-content: space-between;
   gap: 1rem;
