--- a/src/components/Qualities.scss
+++ b/src/components/Qualities.scss
@@ -6,6 +6,7 @@ $color5: #507dcc;
 
 .qualitiesWrapper {
   display: flex;
+  align-items: center;
   padding: 1% 4%;
   background-color: $color1;
   color: white;
