--- a/src/components/BestSelling.scss
+++ b/src/components/BestSelling.scss
@@ -5,6 +5,7 @@ $color4: #114e60;
 $light-font-color: #507dcc;
 
 .bestSellingWrapper {
+  margin-top: 7%;
   padding: 2rem 10%;
   .header {
     text-align: center;
