--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -84,70 +84,72 @@ $color5: #507dcc;
   .rightDiv {
     width: 40%;
     .rightTop {
-      form {
-        h1 {
-          margin: 0;
-          font-size: 2.3rem;
-          font-weight: bolder;
-          color: white;
-          @media (max-width: 1024px) {
-            font-size: 1.3rem;
-            margin: 5% auto 5%;
-            color: $color5;
-          }
-        }
-        p {
-          margin: 3% auto 5%;
-          font-style: italic;
-          color: white;
-          font-size: 1.8rem;
-          @media (max-width: 1024px) {
-            font-size: 1rem;
-            margin: 1% auto 2%;
-          }
-        }
-        input {
-          width: 100%;
-          position: relative;
-          color: $color5;
+      h1 {
+        margin: 0;
+        font-size: 2.3rem;
+        font-weight: bolder;
+        color: white;
+        @media (max-width: 1024px) {
           font-size: 1.3rem;
-          font-weight: bolder;
-          border: none;
-          outline: none;
-          background-color: transparent;
-          border-bottom: 1px solid white;
-          padding: 3% 0 1%;
-          &::placeholder {
-            font-weight: normal;
-          }
-          @media (max-width: 1024px) {
-            padding: 0 0 1% 0;
-            font-size: 1rem;
-          }
-        }
-        button {
-          position: absolute;
-          right: 10%;
-          background-color: transparent;
-          border: none;
-          font-size: 2.3rem;
-          color: white;
-          &:hover {
-            cursor: pointer;
-          }
-          @media (max-width: 1024px) {
-            font-size: 1.5rem;
-            right: 5%;
-          }
+          margin: 5% auto 5%;
+          color: $color5;
         }
       }
+      p {
+        margin: 3% auto 5%;
+        font-style: italic;
+        color: white;
+        font-size: 1.8rem;
+        @media (max-width: 1024px) {
+          font-size: 1rem;
+          margin: 1% auto 2%;
+        }
+      }
+      // input {
+      //   width: 100%;
+      //   position: relative;
+      //   color: $color5;
+      //   font-size: 1.3rem;
+      //   font-weight: bolder;
+      //   border: none;
+      //   outline: none;
+      //   background-color: transparent;
+      //   border-bottom: 1px solid white;
+      //   padding: 3% 0 1%;
+      //   &::placeholder {
+      //     font-weight: normal;
+      //   }
+      //   @media (max-width: 1024px) {
+      //     padding: 0 0 1% 0;
+      //     font-size: 1rem;
+      //   }
+      // }
+      // button {
+      //   position: absolute;
+      //   right: 10%;
+      //   background-color: transparent;
+      //   border: none;
+      //   font-size: 2.3rem;
+      //   color: white;
+      //   &:hover {
+      //     cursor: pointer;
+      //   }
+      //   @media (max-width: 1024px) {
+      //     font-size: 1.5rem;
+      //     right: 5%;
+      //   }
+      // }
     }
     .socialIcons {
       margin: 4% auto 4%;
       .icon {
         color: white;
-        font-size: 1.3rem;
+        font-size: 2rem;
         margin-right: 3%;
+        transition: all 0.3s ease;
+        &:hover {
+          color: $color3;
+        }
       }
     }
     .rightBottom {
